--- a/_posts/1743672842336.md
+++ b/_posts/1743672842336.md
@@ -1,1 +1,8 @@
+---
+title: '浏览器页签'
+description: 浏览器常用页签
+date: '2025-04-03'
+modifiedDate: '2025-04-03'
+image: /assets/images/posts/random-img.jpg
+---
 # 你瞎写的吧
