--- a/_posts/浏览器页签.md
+++ b/_posts/浏览器页签.md
@@ -2,7 +2,7 @@
 title: '浏览器页签'
 description: 浏览器常用页签
 date: '2025-04-03'
-modified_date: '2025-04-03'
+modifiedDate: '2025-04-03'
 image: /assets/images/posts/random-img.jpg
 ---
 | 标题 | URL |
